# RGBD-Fusion

./: .gitignore  README.md  analysis.py  batch_train.sh  eval_seg.py  pyproject.toml  remap_dataset.py  results.txt  train.py  train.sh  train_cls.py  train_seg.py
configs/: attn_fusion.yaml  cls_rgb_baseline.yaml  depth_baseline.yaml  early_fusion.yaml  late_fusion.yaml  mid_fusion.yaml  rgb_baseline.yaml  rgbd_fusion.yaml  se_fusion.yaml  seg_early_fusion.yaml  seg_rgb_baseline.yaml
configs/attn_fusion/: auto_attn_fusion_RGB1.yaml  auto_attn_fusion_RGB2.yaml  auto_attn_fusion_RGB3.yaml  auto_attn_fusion_RGB4.yaml  auto_attn_fusion_RGB5.yaml  auto_attn_fusion_RGB6.yaml  auto_attn_fusion_RGB7.yaml  auto_attn_fusion_RGB8.yaml
configs/early_fusion/: auto_early_fusion_RGB1.yaml  auto_early_fusion_RGB2.yaml  auto_early_fusion_RGB3.yaml  auto_early_fusion_RGB4.yaml  auto_early_fusion_RGB5.yaml  auto_early_fusion_RGB6.yaml  auto_early_fusion_RGB7.yaml  auto_early_fusion_RGB8.yaml
configs/late_fusion/: auto_late_fusion_RGB1.yaml  auto_late_fusion_RGB2.yaml  auto_late_fusion_RGB3.yaml  auto_late_fusion_RGB4.yaml  auto_late_fusion_RGB5.yaml  auto_late_fusion_RGB6.yaml  auto_late_fusion_RGB7.yaml  auto_late_fusion_RGB8.yaml
configs/mid_fusion/: auto_mid_fusion_RGB1.yaml  auto_mid_fusion_RGB2.yaml  (+6 more)
data/: dataset.py  dataset_cls.py  dataset_merge.py  dataset_seg.py
losses/: dice.py
models/: __init__.py  attn_fusion.py  earlyfusion.py  latefusion.py  midfusion.py  resnet_fusion.py  resnet_unet.py  sefusion.py  transformer_fusion.py  upblock.py
utils/: metrics.py
(+16 files in other folders)
